# otus_final_project

./: .cursorignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  REPORT.md  docker-compose.yml  mcp.config.example.json  pyproject.toml
.cursor/rules/: respect-gitignore.mdc  sync-docs-and-plans.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  implement_plan.md  prompts.md  self_requirements.md
sample_docs/: api.js  config.py  deployment.yaml  overview.md  settings.json  types.ts
sample_docs/book/: belyy_shum_u_pruda.txt  teplyy_sloy.md
scripts/: api.js  config.py  deployment.yaml  notes.txt  settings.json  types.ts
src/rag_mcp/: __init__.py  __main__.py  config.py  container.py
src/rag_mcp/application/: ask_progress.py  ask_service.py  clear_index_service.py  index_progress.py  index_service.py  progress_tracker.py  search_progress.py  search_service.py  status_service.py
src/rag_mcp/domain/: fusion.py  models.py  ports.py
src/rag_mcp/logging/: formatter.py  pipeline_logger.py  setup.py  viewer.py
src/rag_mcp/mcp/: middleware.py  progress.py  server.py  tools.py
test_data/chroma/: chroma.sqlite3
tests/e2e/: test_mcp_tools.py
tests/integration/: test_chroma.py  test_hybrid_retriever.py  test_index_restart.py  test_index_service.py  test_index_service_progress.py  test_loaders.py
tests/integration/fixtures/: sample.js  (+6 more)
tests/unit/: test_chunking.py  test_config.py  test_container.py  test_embeddings.py  test_fusion.py  test_graph.py  test_index_progress.py  test_logging.py  test_models.py  test_pipeline_progress.py  test_ports.py
(+16 files in other folders)
